--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.14",
+    "@types/react-toggle": "^4.0.2",
     "@types/superagent": "^4.1.10",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.2.6",
@@ -29,6 +30,7 @@
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
@@ -40,6 +42,8 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
     "react-switch": "^6.0.0",
+    "react-toggle": "^4.1.2",
+    "react-tooltip": "^4.2.21",
     "secretjs": "^0.11.0",
     "socket.io-client": "^4.0.1",
     "superagent": "^6.1.0",
