Finish marketplace inventory create nft and create collection

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,9 @@
 REACT_APP_ENV=TESTNET
 REACT_APP_CHAIN_ID=holodeck-2
 REACT_APP_CHAIN_NAME=holodeck-2
+REACT_APP_SECRET_REQUESTS_DEFAULT_MNEMONIC='guess slogan unfair view lesson raw breeze route effort remind post critic'
 REACT_APP_SECRET_CONTRACT=secret1tvjjqn75345w30mvk8363l5dlfzag9m02advrv
 REACT_APP_SECRET_RPC=https://chainofsecrets.secrettestnet.io:26667
 REACT_APP_SECRET_WS=wss://chainofsecrets.secrettestnet.io:26667/websocket
 REACT_APP_SECRET_LCD=https://testnet-secret-node.eastus.cloudapp.azure.com
+REACT_APP_IPFS_URL=https://ipfs.io/ipfs/
