--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-hash-link": "^2.4.0",
     "@types/react-select": "^4.0.14",
     "@types/react-toggle": "^4.0.2",
     "@types/superagent": "^4.1.10",
@@ -31,6 +32,7 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.1",
+    "react-content-loader": "^6.0.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
@@ -39,9 +41,11 @@
     "react-range": "^1.8.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
     "react-switch": "^6.0.0",
+    "react-toastify": "^7.0.4",
     "react-toggle": "^4.1.2",
     "react-tooltip": "^4.2.21",
     "secretjs": "^0.11.0",
