--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express-rate-limit": "^5.2.6",
     "helmet": "^4.4.1",
     "http": "0.0.1-security",
+    "mongodb": "^3.6.9",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "secretjs": "^0.11.0",
