--- a/app/.env.local
+++ b/app/.env.local
@@ -7,3 +7,4 @@ REACT_APP_SECRET_RPC=https://chainofsecrets.secrettestnet.io:26667
 REACT_APP_SECRET_WS=wss://chainofsecrets.secrettestnet.io:26667/websocket
 REACT_APP_SECRET_LCD=https://testnet-secret-node.eastus.cloudapp.azure.com
 REACT_APP_IPFS_URL=https://ipfs.io/ipfs/
+REACT_APP_SECRET_REST=https://chainofsecrets.secrettestnet.io
