--- a/server/package.json
+++ b/server/package.json
@@ -6,24 +6,24 @@
     "bignumber.js": "^9.0.1",
     "cors": "^2.8.5",
     "cryptocompare": "^1.0.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "emotion": "^11.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "http": "0.0.1-security",
     "mongodb": "^3.6.9",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "secretjs": "^0.11.0",
-    "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "superagent": "^6.1.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.3.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node main.js"
+    "start": "node src/index.js"
   },
   "eslintConfig": {
     "extends": [
